# DUITU

./: .gitattributes  .gitignore  README.md  hello.py  main.ipynb  pyproject.toml  requirements.txt
data/: reduced_dict.csv
models/: UNetKernelSize.py  Unet.py  UnetUpscale.py
playground/: testImports.ipynb  testimports.py  unet7Kernelsize_model.pth  unet7Kernelsize_model_attempt2.pth  unet_model.pth  unet_model_reduced_classes.pth  unet_model_reduced_classes_git.pth  unet_test.py  unet_testinports.py  unet_testinports_ipynb.ipynb
scripts/: dataloader.py  inferencetimer.py  pruning.py  trainUnet.py  visualisations.py
