[project]
name = "duitu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "diffusers>=0.32.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy==1.26.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "ruff>=0.11.2",
    "torch==2.2.0",
    "torchvision==0.17.0",
]

